# agent-resources

./: .gitignore  CLAUDE.md  README.md  agr.toml  pyproject.toml
.claude/skills/agent-resources-vision/: SKILL.md
.claude/skills/product-strategy/flywheel/: SKILL.md
.claude/skills/product-strategy/growth-hacker/: README.md
.claude/skills/product-strategy/jobs-theory/: SKILL.md
agents/: hello-world.md
agr/: __init__.py  handle.py
agr/cli/: add.py  common.py  list.py  run.py  sync.py
command-packages/npm/add-agent-skill/: package.json
command-packages/npm/add-prompt/: package.json
command-packages/npm/add-slash-command/: package.json
command-packages/npm/add-subagent/: package.json
command-packages/npm/create-agent-resources-repo/: package.json
command-packages/npm/install-agent/: package.json
command-packages/npm/install-command/: package.json
command-packages/npm/install-skill/: package.json
command-packages/pypi/add-agent/: README.md  pyproject.toml
command-packages/pypi/add-agent-skill/: pyproject.toml
command-packages/pypi/add-agent-skill/src/add_agent_skill/: __init__.py
command-packages/pypi/add-agent/src/add_agent/: __init__.py
command-packages/pypi/add-command/: README.md  pyproject.toml
command-packages/pypi/add-command/src/add_command/: __init__.py
command-packages/pypi/add-prompt/: pyproject.toml
command-packages/pypi/add-prompt/src/add_prompt/: __init__.py
command-packages/pypi/add-skill/: README.md  pyproject.toml
command-packages/pypi/add-skill/src/add_skill/: __init__.py
command-packages/pypi/add-slash-command/: pyproject.toml
command-packages/pypi/add-slash-command/src/add_slash_command/: __init__.py
command-packages/pypi/add-subagent/: pyproject.toml
command-packages/pypi/add-subagent/src/add_subagent/: __init__.py
command-packages/pypi/agent-add/: README.md  pyproject.toml
command-packages/pypi/agent-add/src/agent_add/: __init__.py
command-packages/pypi/command-add/: README.md  pyproject.toml
command-packages/pypi/command-add/src/command_add/: __init__.py
command-packages/pypi/install-agent/: pyproject.toml
command-packages/pypi/install-agent/src/install_agent/: __init__.py
command-packages/pypi/install-command/: pyproject.toml
command-packages/pypi/install-command/src/install_command/: __init__.py
command-packages/pypi/install-skill/: pyproject.toml
command-packages/pypi/skill-add/: README.md  pyproject.toml
command-packages/pypi/skill-add/src/skill_add/: __init__.py
commands/: docs.md  hello-world.md
docs/: index.html  mkdocs.yml
docs/docs/: create-your-own-repo.md  how-packaging-works.md  index.md  install-agent-resources.md  supported-platforms.md  what-is-agent-resources.md
docs/docs/concepts/: install-locations.md  references-and-paths.md
docs/docs/getting-started/: first-steps.md
docs/docs/guides/: bundles.md  installing-resources.md  managing-dependencies.md
docs/docs/reference/: cli.md  troubleshooting.md
resources/agents/_test/: basic-agent.md  multi-tool-agent.md
resources/commands/_test/: basic-command.md  command-with-args.md
resources/skills/_test/flat-skill/: SKILL.md
resources/skills/_test/skill-with-frontmatter/: SKILL.md
resources/skills/architecture-audit/: SKILL.md
resources/skills/architecture-audit/references/: audit-checklist.md
skills/code-review/: README.md  SKILL.md
skills/commit/: README.md  SKILL.md
skills/pr/: README.md  SKILL.md
skills/product-strategy/flywheel/references/: common-patterns.md  doom-loop.md
skills/product-strategy/growth-hacker/: SKILL.md
skills/product-strategy/growth-hacker/references/: activation-playbook.md
skills/product-strategy/jobs-theory/references/: forces-of-progress.md  switch-interview.md
skills/product-strategy/ost/: SKILL.md
skills/product-strategy/ost/references/: assumption-mapping.md
skills/release-message/: SKILL.md
skills/release-message/references/: writing-style.md
skills/seo/: README.md  SKILL.md  seo.skill
skills/seo/assets/templates/: llms-txt-template.txt  meta-tags-template.html
skills/seo/references/: agent-accessibility.md  analysis-checklists.md  answer-engine-optimization.md  citation-strategies.md  monitoring-measurement.md  output-template.md  traditional-seo.md
skills/seo/scripts/: analyze_headers.py  content_analyzer.py  generate_llms_txt.py  generate_schema.py  meta_generator.py  question_transformer.py
src/agent-resources/: README.md  pyproject.toml
src/agent-resources-npm/: package.json  tsconfig.json  tsup.config.ts
src/agent-resources-npm/src/: exceptions.ts  fetcher.ts  github.ts  index.ts  scaffold.ts  types.ts
src/agent-resources-npm/src/cli/: agent.ts  command.ts  common.ts  (+2 more)
src/agent-resources/agent_resources/: __init__.py  exceptions.py  fetcher.py
src/agr/: README.md  agr.toml  pyproject.toml
src/agr/.claude/skills/madsnorgaard/drupal-expert/: SKILL.md
src/agr/.claude/skills/product-strategy/growth-hacker/assets/templates/: email-sequences.md  landing-page.md  social-posts.md
src/agr/.claude/skills/product-strategy/growth-hacker/references/: frameworks.md  platform-playbooks.md
src/agr/.claude/skills/product-strategy/ost/references/: outcome-levels.md
src/agr/agr/: config.py  discovery.py  exceptions.py  fetcher.py  local_sync.py
src/agr/agr/cli/: add.py  common.py  init.py  list.py  main.py  remove.py  sync.py  update.py
src/agr/src/agr/: __init__.py
src/agr/tests/: test_add_local.py  test_add_unified.py  test_config.py  test_config_local.py  test_init_authoring.py  test_namespaced_paths.py  test_remove_unified.py  test_sync.py
src/skill_add/cli/: agent.py
tests/: conftest.py  test_add_unified.py  test_agrx_unified.py  test_fixtures.py  test_handle.py  test_namespace_flattening.py  test_remove_consistency.py
tests/jobs/: __init__.py  conftest.py  test_01_project_setup.py  test_02_managing_environments.py  test_03_package_deps.py  test_04_viewing_resources.py  test_05_removing_resources.py  test_06_temporary_runs.py  test_07_discovery.py  test_08_configuration.py  test_09_authoring.py  test_10_error_handling.py
(+21 files in other folders)
