[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agr"
version = "0.2.2"
description = "Agent Resources - Install and create Claude Code skills, commands, and agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
agr = "agr.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agr"]
