[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agr"
version = "0.4.0"
description = "Agent Resources - A package and project manager for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "tomlkit>=0.12",
]

[project.scripts]
agr = "agr.cli.main:app"
agrx = "agr.cli.run:app"

[tool.hatch.build.targets.wheel]
packages = ["agr"]
