[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-command"
version = "0.1.0"
description = "Add Claude Code slash commands from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "agent-resources>=0.1.0",
]

[project.scripts]
add-command = "agent_resources.cli.command:app"

[tool.hatch.build.targets.wheel]
packages = ["src/add_command"]
