[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-prompt"
version = "0.0.1"
description = "CLI tool for adding Claude Code prompts from GitHub. Coming soon."
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "ai", "agent", "prompt"]

[project.urls]
Repository = "https://github.com/kasperjunge/agent-resources"

[tool.hatch.build.targets.wheel]
packages = ["src/add_prompt"]
