[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-skill"
version = "0.1.0"
description = "Add Claude Code skills from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "agent-resources>=0.1.0",
]

[project.scripts]
add-skill = "agent_resources.cli.skill:app"

[tool.hatch.build.targets.wheel]
packages = ["src/add_skill"]
