[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "add-subagent"
version = "0.0.1"
description = "CLI tool for adding Claude Code subagents from GitHub. Coming soon."
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "ai", "agent", "subagent"]

[project.urls]
Repository = "https://github.com/kasperjunge/agent-resources"

[tool.hatch.build.targets.wheel]
packages = ["src/add_subagent"]
