[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "command-add"
version = "0.2.0"
description = "Add Claude Code slash commands from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "agent-resources>=0.1.0",
]

[project.scripts]
command-add = "agent_resources.cli.command:app"

[tool.hatch.build.targets.wheel]
packages = ["src/command_add"]
