[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "install-agent"
version = "0.0.1"
description = "CLI tool for installing Claude Code agents from GitHub. Coming soon."
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "ai", "agent"]

[project.urls]
Repository = "https://github.com/kasperjunge/agent-resources"

[tool.hatch.build.targets.wheel]
packages = ["src/install_agent"]
