[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-add"
version = "0.3.0"
description = "Add Claude Code skills from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "agent-resources>=0.1.0",
]

[project.scripts]
skill-add = "agent_resources.cli.skill:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_add"]
